# knpy

./: .gitignore  README.md  braid.py  composite_detector.py  datagen.py  knot_example.ipynb  knpy.env.yaml  main.py  network.py  pull_request_workflow.md  pyproject.toml  requirements.txt  setup.py  train.py
.github/workflows/: ci.yml
knpy/: CMakeLists.txt  __init__.py  braid.cpp  braid.py  braid_vec.py  data_utils.py  dataset.py  exceptions.py  illegal_transformation_exception.py
knpy/data_knots/: benchmark.csv
test/: test_braid.py
tests/: test_braid.py  test_braid_vec.py
